# budy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  cog.toml  fnox.toml  hk.pkl  manifest  mise.toml  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/budy/: __init__.py  categories.py  config.py  constants.py  importer.py  importers.py  models.py  schemas.py  services.py  setup.py  views.py
src/budy/budgets/: add.py  generate.py  list.py
src/budy/importers/: __init__.py  base_importer.py  lhv.py  seb.py  swedbank.py
src/budy/reports/: __init__.py  month.py  search.py  top_payees.py  volatility.py  weekday.py  year.py
src/budy/services/: budget.py  category.py  report.py  transaction.py
src/budy/transactions/: add.py  import_file.py  list.py
src/budy/views/: __init__.py  budget.py  budget_list.py  budget_status.py  category.py  messages.py  report.py  transaction.py  transaction_list.py
tests/: test_rules.py
