[project]
name = "budy"
version = "0.1.0"
description = "An itsy bitsy CLI budgeting assistant."
readme = "README.md"
authors = [
    { name = "Karl Hans Laurits", email = "karl@laurits.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "polars==1.40.1",
    "sqlmodel==0.0.38",
    "typer==0.25.1",
]

[project.scripts]
budy = "budy:app"

[tool.uv]
exclude-newer = "1 week"

[build-system]
requires = ["uv_build==0.11.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis==6.152.4",
    "pytest==9.0.3",
    "ruff==0.15.12",
    "ty==0.0.34",
]
