[project]
name = "budy"
version = "0.1.0"
description = "An itsy bitsy CLI budgeting assistant."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Karl Hans Laurits", email = "karl@laurits.dev" }]
dependencies = [
  "polars==1.40.1",
  "sqlmodel==0.0.38",
  "typer==0.25.1",
]

[project.scripts]
budy = "budy:app"

[dependency-groups]
dev = [
  "hypothesis==6.152.4",
  "pytest==9.0.3",
]

[build-system]
requires = ["uv_build==0.11.21"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "1 week"
